fix z-index for modals

--- a/src/style/app-variables.scss
+++ b/src/style/app-variables.scss
@@ -11,6 +11,7 @@ $app-layout-margin: 20px;
 $app-header-height: 55px;
 $app-body-padding-top: $app-header-height + $app-layout-margin;
 $app-header-z-index: 10000;
+$app-ion-app-z-index: 10001;
 $app-drawer-z-index: 11000;
 
 // Form
